Add sass and add css to info part

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,19 @@
   justify-content: flex-start;
   .app-info{
     flex: 0.25;
+    margin-left: 10px;
+    .app-search{
+      display: flex;
+      flex-direction: row;
+      padding: 21px;
+
+      input{
+        height: 23px;
+        width: 79%;
+        margin-top: 17px;
+      }
+
+    }
   }
   .app-map{
     flex: 0.75;
