--- a/src/index.scss
+++ b/src/index.scss
@@ -1,43 +1,15 @@
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.app-map-annotations {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-
-  .app-info{
-    flex: 0.25;
-    .app-action-buttons{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      margin: 5px;
-    }
-  }
-  .app-map{
-    flex: 0.75;
-  }
-
-
-
-  button {
-    height:50px;
-    width:100px;
-    border: none;
-    background: #404040;
-    color: #ffffff;
-    font-weight: 100;
-    padding: 20px;
-    text-transform: uppercase;
-    border-radius: 6px;
-    display: inline-block;
-    transition: all 0.3s ease 0s;
-    margin:5px;
-  }
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
 }
 
 
