--- a/src/App.scss
+++ b/src/App.scss
@@ -50,4 +50,33 @@
     transition: all 0.3s ease 0s;
     margin: 5px;
   }
+
+  .app-annotation-list{
+
+    width: 100%;
+    height: 100%;
+    background-color: #7ca7a7;
+    list-style: none;
+
+    ul{
+      overflow-y: scroll;
+      max-height: 350px;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0;
+      margin: 0;
+
+      li{
+        font-size: 20px;
+        margin-top: 5px;
+        background-color: #4a325a;
+        width: 100%;
+        flex: 1;
+        color: #ffffff;
+        text-align: center
+      }
+    }
+  }
 }
