Fix cursor on routes list

--- a/src/App.scss
+++ b/src/App.scss
@@ -76,6 +76,7 @@
         flex: 1;
         color: #ffffff;
         text-align: center;
+        cursor: default ;
 
         &.chosen-route{
           background-color: #dc46d0;
