Fix map rendering

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,10 @@
+html {
+  height: 100%;
+}
+body, #root, .app-map-annotations {
+  min-height: 100%;
+  height:100%;
+}
 .app-map-annotations{
   display: flex;
   flex-direction: row;
@@ -30,10 +37,28 @@
       width: 100%;
       background-color: #866277;
       margin: 0px;
+      justify-content: space-around;
+
+      .mapboxgl-ctrl-group{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+
+        .mapbox-gl-draw_ctrl-draw-btn{
+          background-color: #866277;
+          width: 74px;
+        }
+      }
     }
   }
   .app-map{
     flex: 0.75;
+
+    .mapboxgl-map{
+      height: 100%;
+      width:100%;
+    }
   }
 
   button, .app-action-buttons>input {
@@ -99,5 +124,13 @@
   .mapbox-gl-draw_ctrl-draw-btn {
     background-repeat: no-repeat;
     background-position: center;
+  }
+  .mapboxgl-ctrl-group mapboxgl-ctrl{
+    display: flex;
+  }
+  .mapboxgl-control-container{
+    .mapboxgl-ctrl-top-right{
+      display: none;
+    }
   }
 }
