--- a/src/Style.scss
+++ b/src/Style.scss
@@ -1,7 +1,12 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+  min-height: 100%;
 }
 
 .app-map-annotations {
