--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,8 @@ body, #root, .app-map-annotations {
   flex-direction: row;
   justify-content: flex-start;
   .app-info{
-    width: 100%;
+    height: 100%;
+    width:100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -84,16 +85,18 @@ body, #root, .app-map-annotations {
     list-style: none;
 
     ul{
-      overflow-y: scroll;
-      max-height: 350px;
+      height: 100%;
+      width:100%;
       list-style: none;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 0;
       margin: 0;
+      overflow-y: scroll;
 
       li{
+        float: left;
         font-size: 20px;
         margin-top: 5px;
         background-color: #4a325a;
@@ -102,6 +105,7 @@ body, #root, .app-map-annotations {
         color: #ffffff;
         text-align: center;
         cursor: default ;
+        max-height: 25px;
 
         &.chosen-route{
           background-color: #dc46d0;
